--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     "main"
     "footer";
   grid-auto-flow: row;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 :root {
@@ -24,7 +24,6 @@ body {
   --color-Grayish-blue: hsl(240, 2%, 79%);
   --color-very-dark-grayish-blue: hsl(207, 13%, 34%);
   --color-very-dark-black-blue: hsl(240, 10%, 16%);
-
   --very-light-red: hsl(13, 100%, 72%);
   --light-red: hsl(353, 100%, 62%);
   --Very-dark-gray-blue: hsl(237, 17%, 21%);
@@ -92,6 +91,7 @@ body {
 .title-landing-page {
   font-size: 3rem;
   margin-bottom: 0;
+  text-align: center;
 }
 .subtitle_landing_page {
   font-weight: 300;
@@ -210,6 +210,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 1rem;
+
   /* display: none; */
   /* visibility: hidden; */
 }
@@ -241,8 +242,13 @@ body {
   /* display: none; */
 }
 
+.links__menus {
+  display: none;
+}
+
 .menu-title {
   color: white;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
@@ -324,7 +330,6 @@ body {
     font-size: 1rem;
   }
   .button__register {
-    /* background-color: ; */
     background-image: linear-gradient(
       to right,
       var(--very-light-red),
@@ -334,23 +339,38 @@ body {
   }
 }
 .first___part {
-  height: 120vh;
   width: 100vw;
   display: flex;
-
   justify-content: center;
   align-items: center;
-  border-color: chocolate;
-  border-width: 5px;
-  border-style: solid;
+  overflow: hidden;
 }
 
+@media screen and (max-width: 900px) {
+  .first___part {
+    position: relative;
+    top: 170px;
+  }
+}
+.box__first__part {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  .box__first__part {
+    flex-direction: column;
+  }
+  .header_nav_title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .article__container {
   position: relative;
-  /* border-color: black;
-  border-style: solid; */
-  max-width: 520px;
-  max-height: 250px;
 }
 
 .article__container:nth-child(2) {
@@ -359,34 +379,14 @@ body {
 
 .container__first__part {
   position: relative;
-  /* width; */
-  width: 700px;
-  /* max-width: 500px; */
-  height: 500px;
-  /* border-width: 5px;
-  border-color: yellow;
-  border-style: solid; */
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
 .img__first__part {
-  position: absolute;
-  width: 950px;
+  position: relative;
   height: 900px;
-  left: 680px;
-}
-.box__first__part {
-  /* border-width: 5px;
-  border-color: green;
-  border-style: solid; */
-  width: 100%;
-  max-width: 1000px;
-  height: 100vh;
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
 }
 
 .title__first__div,
@@ -407,16 +407,41 @@ body {
 .title__page {
   width: 100%;
   height: 100px;
-  /* border-style: solid; */
   align-items: center;
   display: flex;
   justify-content: center;
   position: relative;
-  top: 150px;
+  top: 200px;
   font-size: 2.1em;
-  margin-top: 80px;
 }
+@media screen and (max-width: 900px) {
+  .article__container {
+    width: 90%;
+    align-self: center;
+  }
+  .container__first__part {
+    order: 2;
+    width: 100%;
+  }
 
+  .img__first__part {
+    height: 430px;
+    order: 1;
+  }
+
+  .parragraft__first__div {
+    word-wrap: break-word;
+    text-align: center;
+  }
+
+  .title__first__div {
+    font-size: 1.8rem;
+    text-align: center;
+    white-space: normal;
+
+    width: 90%;
+  }
+}
 .second__part {
   margin-top: 100px;
   width: 100%;
