--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ body {
     "main"
     "footer";
   grid-auto-flow: row;
-  /* overflow-x: hidden; */
 }
 
 :root {
@@ -445,7 +444,7 @@ body {
 .second__part {
   margin-top: 100px;
   width: 100%;
-  min-height: 350px;
+  height: 350px;
   position: relative;
   border-style: solid;
   background-image: linear-gradient(
@@ -456,12 +455,9 @@ body {
   color: white;
   border-bottom-left-radius: 80px;
   border-top-right-radius: 100px;
-  border-style: solid;
-  border-color: yellow;
-  border-width: 10px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   margin-top: 300px;
   margin-bottom: 60px;
 }
@@ -469,23 +465,17 @@ body {
   content: "";
   background: url(../images/bg-pattern-circles.svg) -40vh 80%;
   position: absolute;
-
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  /* background-position-y: 80%; */
-  border-width: 5px;
-  border-color: red;
-  border-style: solid;
-  border-bottom-left-radius: 100px;
+  border-bottom-left-radius: 80px;
   border-top-right-radius: 100px;
 }
+
 .container__second__part {
-  width: 50%;
-  height: 100%;
   position: relative;
-  border-color: wheat;
-  border-style: solid;
+  width: 50%;
+  padding: 10px;
 }
 
 .title__second__div {
@@ -495,16 +485,32 @@ body {
 }
 
 .img__second__part {
-  position: absolute;
-  width: 550px;
-  height: 580px;
-  border-color: hotpink;
-  border-style: solid;
-  right: 50%;
-  margin-top: 100px;
-  /* right: 800px; */
+  position: relative;
+  content: url(../images/illustration-phones.svg);
+  right: 40px;
+  top: 30px;
 }
-
+@media screen and (max-width: 900px) {
+  .second__part {
+    height: 85vh;
+    flex-direction: column;
+    margin-top: 600px;
+  }
+  .img__second__part {
+    right: 0;
+    width: 90%;
+    bottom: 400px;
+    top: -180px;
+    /* border-style: solid; */
+  }
+  .container__second__part {
+    top: -210px;
+    width: 90%;
+    text-align: center;
+    margin-bottom: 100px;
+    /* border-style: solid; */
+  }
+}
 .final__part {
   height: 125vh;
   width: 100vw;
@@ -513,12 +519,9 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 100px;
-  /* justify-content: flex-end; */
 }
 
 .container__final__part {
-  /* margin-right: 200px; */
-  /* right: 300px; */
   position: relative;
   border-color: teal;
   border-style: solid;
@@ -529,15 +532,6 @@ body {
   justify-content: center;
 }
 
-/* .final__part::before {
-  position: absolute;
-  content: "";
-  width: 100vw;
-  height: 100%;
-  border-style: solid;
-  background-image: url(../images/illustration-laptop-desktop.svg);
-  background-repeat: no-repeat;
-} */
 .final__part__img__container {
   position: relative;
   background-image: url(../images/illustration-laptop-desktop.svg);
@@ -546,7 +540,6 @@ body {
   border-style: solid;
   background-repeat: no-repeat;
   background-position-x: -340px;
-  /* right: 340px; */
 }
 
 .title__second__div {
@@ -564,7 +557,6 @@ body {
   width: 65%;
   color: var(--color-very-dark-grayish-blue);
   font-size: 0.9em;
-
   font-weight: 300;
 }
 
@@ -595,7 +587,6 @@ body {
   width: 100%;
   max-width: 1000px;
   height: 80%;
-
   display: flex;
 }
 @media screen and (max-width: 900px) {
